# Codely

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  debug_token.py  next-task.md  package.json  pyproject.toml  requirements.txt  run.py  system-instructions.md  vulnerabilities.md
.docs/: API_SPEC.md  ARCHITECTURE.md  CONVENTIONS.md  DEVELOPMENT_GUIDE.md  GUIDELINES.md  IMPLEMENTATION_SUMMARY.md  MERGE_SUMMARY_20260720.md  RULES_CHECKLIST.md  VERIFICATION_PLAYBOOK.md  audit.md  chatmem.md  data_model.md  design.md  memory.md  plan.md  prd.md  procedures.md  revaluate.md  testing.md  threat_model.md
clients/cli/: codely_cli.py
clients/python_sdk/: codely.py
clients/web/: index.html  login.html
core/: config.py
core/api/: __init__.py  main.py
core/auth/: __init__.py  database.py  email_service.py  middleware.py  models.py  token_service.py
core/llm/: base.py
core/llm/adapters/: ollama.py
core/memory/: base.py  vector_store.py
core/modules/: base.py  registry.py
core/rag/: engine.py
core/task_engine/: manager.py
modules/: __init__.py
modules/file_write/: __init__.py
modules/sandbox_exec/: __init__.py
modules/search_web/: __init__.py
modules/test_gen/: __init__.py
storage/: auth.db  model.json
tests/: test_api.py
