[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codely-ai"
version = "0.6.1"
description = "A modular, project-agnostic AI agent platform."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "pydantic",
    "numpy",
    "faiss-cpu",
    "python-multipart",
    "duckduckgo-search",
    "pypdf",
    "pillow",
    "python-docx",
    "openpyxl",
    "python-pptx",
    "python-dotenv",
    "beautifulsoup4",
    "lxml",
    "itsdangerous"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]